added filter, gallery, panorama components

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -58,6 +58,228 @@
             </p>
         </div>
     </section>
+
+    <section class="content-section panorama">
+        <div class="content-section__wrapper">
+            <span class="panorama__sticker">панорама дня</span>
+        </div>
+    </section>
+
+    <section class="content-section panorama-comment">
+        <div class="content-section__wrapper">
+            <div class="gallery-comment">
+                <span class="gallery-comment__name">
+                    Анна <span>(5 минут назад)</span>
+                </span>
+
+                <p class="gallery-comment__text">
+                    Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
+                </p>
+
+                <div class="gallery-comment__like">
+                    <button class="gallery-comment__like-button" type="button">
+                        <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                    </button>
+                    <span class="gallery-comment__like-count">нравится: 215</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="content-section gallery-list">
+        <div class="content-section__wrapper">
+            <div class="gallery-item">
+                <div class="gallery-item__wrapper">
+                    <img class="gallery-item__photo" src="../img/car.jpg" alt="car">
+                </div>
+
+                <div class="gallery-comment">
+                    <span class="gallery-comment__name">
+                        Левон <span>(5 часов назад)</span>
+                    </span>
+
+                    <p class="gallery-comment__text">
+                        Вчера он на луну летал, сегодня в руки к нам попал.
+                    </p>
+
+                    <div class="gallery-comment__like">
+                        <button class="gallery-comment__like-button" type="button">
+                            <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                        </button>
+                        <span class="gallery-comment__like-count">нравится: 356</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <div class="gallery-item__wrapper">
+                    <img class="gallery-item__photo" src="../img/drums.jpg" alt="drums">
+                </div>
+
+                <div class="gallery-comment">
+                    <span class="gallery-comment__name">
+                        Антон <span>(12 часов назад)</span>
+                    </span>
+
+                    <p class="gallery-comment__text">
+                        Соседи будут рады!
+                    </p>
+
+                    <div class="gallery-comment__like">
+                        <button class="gallery-comment__like-button" type="button">
+                            <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                        </button>
+                        <span class="gallery-comment__like-count">нравится: 666</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <div class="gallery-item__wrapper">
+                    <img class="gallery-item__photo" src="../img/roof.jpg" alt="roof">
+                </div>
+
+                <div class="gallery-comment">
+                    <span class="gallery-comment__name">
+                        Борис <span>(20 часов назад)</span>
+                    </span>
+
+                    <p class="gallery-comment__text">
+                        Здесь могла быть ваша цитата о высоком и вечном.
+                    </p>
+
+                    <div class="gallery-comment__like">
+                        <button class="gallery-comment__like-button" type="button">
+                            <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                        </button>
+                        <span class="gallery-comment__like-count">нравится: 215</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <div class="gallery-item__wrapper">
+                    <img class="gallery-item__photo" src="../img/market.jpg" alt="market">
+                </div>
+
+                <div class="gallery-comment">
+                    <span class="gallery-comment__name">
+                        Сергей <span>(25 часов назад)</span>
+                    </span>
+
+                    <p class="gallery-comment__text">
+                        Самая кубанская в мире!
+                    </p>
+
+                    <div class="gallery-comment__like">
+                        <button class="gallery-comment__like-button" type="button">
+                            <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                        </button>
+                        <span class="gallery-comment__like-count">нравится: 4</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <div class="gallery-item__wrapper">
+                    <img class="gallery-item__photo" src="../img/hill.jpg" alt="hill">
+                </div>
+
+                <div class="gallery-comment">
+                    <span class="gallery-comment__name">
+                        Максим <span>(40 часов назад)</span>
+                    </span>
+
+                    <p class="gallery-comment__text">
+                        Где снег-то?
+                    </p>
+
+                    <div class="gallery-comment__like">
+                        <button class="gallery-comment__like-button" type="button">
+                            <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                        </button>
+                        <span class="gallery-comment__like-count">нравится: 150</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <div class="gallery-item__wrapper">
+                    <img class="gallery-item__photo" src="../img/plane.jpg" alt="plane">
+                </div>
+
+                <div class="gallery-comment">
+                    <span class="gallery-comment__name">
+                        Надежда <span>(45 часов назад)</span>
+                    </span>
+
+                    <p class="gallery-comment__text">
+                        Всем GM и взаимный лайки!
+                    </p>
+
+                    <div class="gallery-comment__like">
+                        <button class="gallery-comment__like-button" type="button">
+                            <img class="gallery-comment__like-icon" src="../img/icon-heart.svg" alt="like">
+                        </button>
+                        <span class="gallery-comment__like-count">нравится: 2560</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="content-section gallery-title">
+        <div class="content-section__wrapper">
+            <p class="title">
+                Затмите их всех!<br>
+                Выкладывайте все, что накопилось в телефоне!
+            </p>
+        </div>
+    </section>
+
+    <section class="content-section filter">
+        <div class="content-section__wrapper">
+            <div class="filter__wrapper">
+                <img class="filter__image" src="../img/road.jpg" alt="road">
+            </div>
+
+            <div class="filter__main">
+                <div class="filter__tools">
+                    <div class="filter__list">
+                        <div class="filter__list-wrapper">
+                            <label class="filter__item">
+                                <img class="filter__icon" src="../img/crop.svg" alt="crop">
+                                <img class="filter__icon--inactive" src="../img/crop--inactive.svg" alt="crop--inactive">
+
+                                <input class="filter__input" type="range">
+                            </label>
+
+                            <label class="filter__item filter__item--inactive">
+                                <img class="filter__icon" src="../img/fill.svg" alt="fill">
+                                <img class="filter__icon--inactive" src="../img/fill--inactive.svg" alt="fill--inactive">
+
+                                <input class="filter__input" type="range">
+                            </label>
+
+                            <label class="filter__item filter__item--inactive">
+                                <img class="filter__icon" src="../img/contrast.svg" alt="contrast">
+                                <img class="filter__icon--inactive" src="../img/contrast--inactive.svg" alt="contrast--inactive">
+
+                                <input class="filter__input" type="range">
+                            </label>
+                        </div>
+                    </div>
+
+                    <input class="filter__input filter__input--mobile" type="range">
+                </div>
+
+                <div class="filter__buttons">
+                    <button class="filter__btn filter__btn--submit" type="submit">Запостить</button>
+                    <button class="filter__btn" type="reset">Отмена</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <footer class="content-section footer footer--form-mobile">
